Use pattern matching vars instead of casting