@@ -63,9 +63,8 @@ public class IdeaNotNullPass implements Pass {
       st = st.getFirst();
     }
 
-    if (st instanceof IfStatement) {
+    if (st instanceof IfStatement ifstat) {
 
-      IfStatement ifstat = (IfStatement)st;
       Statement ifbranch = ifstat.getIfstat();
 
       Exprent if_condition = ifstat.getHeadexprent().getCondition();
@@ -74,20 +73,18 @@ public class IdeaNotNullPass implements Pass {
 
       // TODO: FunctionType.NE also possible if reversed order (in theory)
       if (ifbranch != null &&
-          if_condition instanceof FunctionExprent &&
-          ((FunctionExprent)if_condition).getFuncType() == FunctionType.EQ &&
+        if_condition instanceof FunctionExprent func &&
+          func.getFuncType() == FunctionType.EQ &&
           ifbranch instanceof BasicBlockStatement &&
           ifbranch.getExprents().size() == 1 &&
-          ifbranch.getExprents().get(0) instanceof InvocationExprent) {
+          ifbranch.getExprents().get(0) instanceof InvocationExprent invocExpr) {
 
-        FunctionExprent func = (FunctionExprent)if_condition;
         Exprent first_param = func.getLstOperands().get(0);
         Exprent second_param = func.getLstOperands().get(1);
 
         if (second_param instanceof ConstExprent &&
             second_param.getExprType().type == CodeType.NULL) { // TODO: reversed parameter order
-          if (first_param instanceof VarExprent && ((InvocationExprent)ifbranch.getExprents().get(0)).getName().equals("$$$reportNull$$$0")) {
-            VarExprent var = (VarExprent)first_param;
+          if (first_param instanceof VarExprent var && invocExpr.getName().equals("$$$reportNull$$$0")) {
 
             boolean thisvar = !mt.hasModifier(CodeConstants.ACC_STATIC);
 
@@ -209,129 +206,118 @@ public class IdeaNotNullPass implements Pass {
     Statement parent = stat.getParent();
 
     // TODO: is this check doing anything? seems like modern notnull creation doesn't cause this to be run.
-    if (parent instanceof IfStatement && stat instanceof BasicBlockStatement && stat.getExprents().size() == 1) {
+    if (parent instanceof IfStatement ifparent && stat instanceof BasicBlockStatement && stat.getExprents().size() == 1) {
       Exprent exprent = stat.getExprents().get(0);
-      if (exprent instanceof ExitExprent) {
-        ExitExprent exit_exprent = (ExitExprent)exprent;
-        if (exit_exprent.getExitType() == ExitExprent.Type.RETURN) {
-          Exprent exprent_value = exit_exprent.getValue();
-          //if(exprent_value instanceof VarExprent) {
-          //	VarExprent var_value = (VarExprent)exprent_value;
+      if (exprent instanceof ExitExprent exit_exprent && exit_exprent.getExitType() == ExitExprent.Type.RETURN) {
+        Exprent exprent_value = exit_exprent.getValue();
+        //if(exprent_value instanceof VarExprent) {
+        //	VarExprent var_value = (VarExprent)exprent_value;
 
-          IfStatement ifparent = (IfStatement)parent;
-          Exprent if_condition = ifparent.getHeadexprent().getCondition();
+        Exprent if_condition = ifparent.getHeadexprent().getCondition();
 
-          if (ifparent.getElsestat() == stat && if_condition instanceof FunctionExprent &&
-              ((FunctionExprent)if_condition).getFuncType() == FunctionType.EQ) { // TODO: reversed order possible (in theory)
+        if (ifparent.getElsestat() == stat && if_condition instanceof FunctionExprent func &&
+          func.getFuncType() == FunctionType.EQ) { // TODO: reversed order possible (in theory)
 
-            FunctionExprent func = (FunctionExprent)if_condition;
-            Exprent first_param = func.getLstOperands().get(0);
-            Exprent second_param = func.getLstOperands().get(1);
+          Exprent first_param = func.getLstOperands().get(0);
+          Exprent second_param = func.getLstOperands().get(1);
 
-            StatEdge ifedge = ifparent.getIfEdge();
-            StatEdge elseedge = ifparent.getElseEdge();
+          StatEdge ifedge = ifparent.getIfEdge();
+          StatEdge elseedge = ifparent.getElseEdge();
 
-            Statement ifbranch = ifparent.getIfstat();
-            Statement elsebranch = ifparent.getElsestat();
+          Statement ifbranch = ifparent.getIfstat();
+          Statement elsebranch = ifparent.getElsestat();
 
-            if (second_param instanceof ConstExprent &&
-                second_param.getExprType().type == CodeType.NULL) { // TODO: reversed parameter order
-              //if(first_param instanceof VarExprent && ((VarExprent)first_param).getIndex() == var_value.getIndex()) {
-              if (first_param.equals(exprent_value)) {        // TODO: check for absence of side effects like method invocations etc.
-                if (ifbranch instanceof BasicBlockStatement &&
-                    ifbranch.getExprents().size() == 1 &&
-                    // TODO: special check for IllegalStateException
-                    ifbranch.getExprents().get(0) instanceof ExitExprent) {
+          if (second_param instanceof ConstExprent &&
+            second_param.getExprType().type == CodeType.NULL) { // TODO: reversed parameter order
+            //if(first_param instanceof VarExprent && ((VarExprent)first_param).getIndex() == var_value.getIndex()) {
+            if (first_param.equals(exprent_value)) {        // TODO: check for absence of side effects like method invocations etc.
+              if (ifbranch instanceof BasicBlockStatement &&
+                ifbranch.getExprents().size() == 1 &&
+                // TODO: special check for IllegalStateException
+                ifbranch.getExprents().get(0) instanceof ExitExprent) {
 
-                  ifparent.getFirst().removeSuccessor(ifedge);
-                  ifparent.getFirst().removeSuccessor(elseedge);
+                ifparent.getFirst().removeSuccessor(ifedge);
+                ifparent.getFirst().removeSuccessor(elseedge);
 
-                  ifparent.getStats().removeWithKey(ifbranch.id);
-                  ifparent.getStats().removeWithKey(elsebranch.id);
+                ifparent.getStats().removeWithKey(ifbranch.id);
+                ifparent.getStats().removeWithKey(elsebranch.id);
 
-                  if (ifbranch.hasAnySuccessor()) {
-                    ifbranch.removeSuccessor(ifbranch.getFirstSuccessor());
-                  }
-
-                  if (!ifparent.getFirst().getExprents().isEmpty()) {
-                    elsebranch.getExprents().addAll(0, ifparent.getFirst().getExprents());
-                  }
-
-                  ifparent.getParent().replaceStatement(ifparent, elsebranch);
-                  ifparent.getParent().setAllParent();
-
-                  return true;
+                if (ifbranch.hasAnySuccessor()) {
+                  ifbranch.removeSuccessor(ifbranch.getFirstSuccessor());
                 }
+
+                if (!ifparent.getFirst().getExprents().isEmpty()) {
+                  elsebranch.getExprents().addAll(0, ifparent.getFirst().getExprents());
+                }
+
+                ifparent.getParent().replaceStatement(ifparent, elsebranch);
+                ifparent.getParent().setAllParent();
+
+                return true;
               }
             }
           }
-          //}
         }
+        //}
       }
     }
     else if (parent != null &&
-             parent instanceof SequenceStatement &&
-             stat instanceof BasicBlockStatement &&
-             stat.getExprents().size() == 1) {
-      Exprent exprent = stat.getExprents().get(0);
-      if (exprent instanceof ExitExprent) {
-        ExitExprent exit_exprent = (ExitExprent)exprent;
-        if (exit_exprent.getExitType() == ExitExprent.Type.RETURN) {
-          Exprent exprent_value = exit_exprent.getValue();
+      parent instanceof SequenceStatement sequence &&
+      stat instanceof BasicBlockStatement &&
+      stat.getExprents().size() == 1 &&
+      stat.getExprents().get(0) instanceof ExitExprent exit_exprent &&
+      exit_exprent.getExitType() == ExitExprent.Type.RETURN) {
+      Exprent exprent_value = exit_exprent.getValue();
 
-          SequenceStatement sequence = (SequenceStatement)parent;
-          int sequence_stats_number = sequence.getStats().size();
+      int sequence_stats_number = sequence.getStats().size();
 
-          if (sequence_stats_number > 1 &&
-              sequence.getStats().getLast() == stat &&
-              sequence.getStats().get(sequence_stats_number - 2) instanceof IfStatement) {
+      if (sequence_stats_number > 1 &&
+        sequence.getStats().getLast() == stat &&
+        sequence.getStats().get(sequence_stats_number - 2) instanceof IfStatement ifstat) {
 
-            IfStatement ifstat = (IfStatement)sequence.getStats().get(sequence_stats_number - 2);
-            Exprent if_condition = ifstat.getHeadexprent().getCondition();
+        Exprent if_condition = ifstat.getHeadexprent().getCondition();
 
-            if (ifstat.iftype == IfStatement.IFTYPE_IF && if_condition instanceof FunctionExprent &&
-                ((FunctionExprent)if_condition).getFuncType() == FunctionType.EQ) { // TODO: reversed order possible (in theory)
+        if (ifstat.iftype == IfStatement.IFTYPE_IF && if_condition instanceof FunctionExprent func &&
+          func.getFuncType() == FunctionType.EQ) { // TODO: reversed order possible (in theory)
 
-              FunctionExprent func = (FunctionExprent)if_condition;
-              Exprent first_param = func.getLstOperands().get(0);
-              Exprent second_param = func.getLstOperands().get(1);
+          Exprent first_param = func.getLstOperands().get(0);
+          Exprent second_param = func.getLstOperands().get(1);
 
-              Statement ifbranch = ifstat.getIfstat();
+          Statement ifbranch = ifstat.getIfstat();
 
-              if (second_param instanceof ConstExprent &&
-                  second_param.getExprType().type == CodeType.NULL) { // TODO: reversed parameter order
-                if (first_param.equals(exprent_value)) {        // TODO: check for absence of side effects like method invocations etc.
-                  if (ifbranch instanceof BasicBlockStatement &&
-                      ifbranch.getExprents().size() == 1 &&
-                      ifbranch.getExprents().get(0) instanceof InvocationExprent && ((InvocationExprent)ifbranch.getExprents().get(0)).getName().equals("$$$reportNull$$$0")) {
+          if (second_param instanceof ConstExprent &&
+            second_param.getExprType().type == CodeType.NULL) { // TODO: reversed parameter order
+            if (first_param.equals(exprent_value)) {        // TODO: check for absence of side effects like method invocations etc.
+              if (ifbranch instanceof BasicBlockStatement &&
+                ifbranch.getExprents().size() == 1 &&
+                ifbranch.getExprents().get(0) instanceof InvocationExprent invocation &&
+                invocation.getName().equals("$$$reportNull$$$0")) {
 
-                    // In the format of
-                    //
-                    // if (returnValue == null) {
-                    //   $$$reportNull$$$(index); // index is the index of reportNull appearing in the code
-                    // }
-                    //
-                    // return returnValue;
-                    //
+                // In the format of
+                //
+                // if (returnValue == null) {
+                //   $$$reportNull$$$(index); // index is the index of reportNull appearing in the code
+                // }
+                //
+                // return returnValue;
+                //
 
-                    ifstat.getFirstSuccessor().remove(); // remove 'else' edge
+                ifstat.getFirstSuccessor().remove(); // remove 'else' edge
 
-                    if (!ifstat.getFirst().getExprents().isEmpty()) {
-                      stat.getExprents().addAll(0, ifstat.getFirst().getExprents());
-                    }
-
-                    for (StatEdge edge : ifstat.getAllPredecessorEdges()) {
-                      edge.changeDestination(stat);
-                    }
-
-                    ifbranch.getFirstSuccessor().remove();
-
-                    sequence.getStats().removeWithKey(ifstat.id);
-                    sequence.setFirst(sequence.getStats().get(0));
-
-                    return true;
-                  }
+                if (!ifstat.getFirst().getExprents().isEmpty()) {
+                  stat.getExprents().addAll(0, ifstat.getFirst().getExprents());
                 }
+
+                for (StatEdge edge : ifstat.getAllPredecessorEdges()) {
+                  edge.changeDestination(stat);
+                }
+
+                ifbranch.getFirstSuccessor().remove();
+
+                sequence.getStats().removeWithKey(ifstat.id);
+                sequence.setFirst(sequence.getStats().get(0));
+
+                return true;
               }
             }
           }
